Prepared for migration to Java 1.6. Fixed warnings and potential errors .